--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": "18.13.0"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
